...
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/grey"
        tools:ignore="TextFields,autofill" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/simply_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
...
        android:textColorHint="@color/black_transparent"
        android:textCursorDrawable="@color/black"
        android:textSize="16sp"
        tools:ignore="autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_forgot_instructions"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
...
