...
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/upperView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <com.google.android.material.button.MaterialButton
...
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotPass_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button_id_log_in"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:elevation="4dp"
...
