<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/useThisFragmentID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@color/dark_green_transparent">


        </FrameLayout>
        <include layout="@layout/layout_bottom_navigation" />
    </RelativeLayout>

    <!--bottom navigation-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </RelativeLayout>

</LinearLayout>