...
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="send">Send</string>
    <string name="please_em_pass">Please type in email and password</string>
    <string name="please_em">Please type in email or phone</string>
    <string name="please_pass">Please type in your password</string>

    <!--Sign Up-->
    <string name="please_fill">Please fill in the information and Agree to Terms and Conditions</string>
...
    <string name="pass_no_match">Password does not match</string>
    <string name="pass_must_match">Error: Password must match confirm password. Try again</string>
    <string name="agree_to_terms_first">Agree to Terms and Conditions first</string>
    <string name="agree_terms_toast">Error: Agree to Terms and Conditions first</string>
    <string name="register_for_free">Register for Free</string>
    <string name="i_agree_to">I agree to </string>
    <string name="terms_and_conditions">Terms and Conditions.</string>
    <!--    <string name="terms_and_conditions"><u>Terms and Conditions.</u></string>-->
    <string name="I_agree_to_terms_and_conditions">I agree </string>
    <string name="simply_enter">Simply enter your email address below and we will send you instructions on how to reset your password.</string>

    <!--Forgot password fragment strings -->

    <string name="hint_forgot_password_email">Enter your email here</string>
    <string name="forgot_password_text">Forgot Password?</string>
...
    <!--    database-->
    <string name="eye_plant">eye_plant</string>
    <string name="service_name">mongodb-atlas</string>
    <string name="eye_plant_plants">plants</string>
    <string name="eye_plant_users">users</string>
    <string name="eye_plant_plant_profiles">plant_profiles</string>
    <string name="name_for_db">name</string>
    <string name="email_for_db">email</string>
    <string name="picture_for_db">picture</string>
    <string name="number_of_plants_for_db">number_of_plants</string>
    <string name="birthday_for_db">birthday</string>


...
    <string name="your_garden">Your Garden</string>
    <string name="settings">Settings</string>


    <string name="saving_changes">Saving Plant Profile Changes</string>
    <string name="reg_complete">Registration complete please verify your email</string>
    <string name="click_here_sign_up">Click here to Sign up</string>
    <string name="current">Current</string>
    <string name="light">Light     </string>

    <!--spinner textArray-->
<array name="spinner_array">
    <item></item>
...
