...
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginTop="25dp"-->
        <!--            android:layout_marginBottom="25dp" />-->


        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/googleSignInButton"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
...
